prevent switch getting squashed by settign a min-width

--- a/components/src/core/components/Input/switch-input.scss
+++ b/components/src/core/components/Input/switch-input.scss
@@ -57,6 +57,7 @@
   position: relative;
   width: $oxd-switch-width;
   height: $oxd-switch-height;
+  min-width: $oxd-switch-width;
   border-radius: $oxd-switch-radius;
   transition: background-color 0.2s ease;
 
